--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,20 @@ GOOGLE FONT
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Orbitron&display=swap');
 
 /* ==========
+NAVBAR
+========== */
+.navbar {
+  width: 100%;
+  text-align: end;
+  background-color: #101010;
+}
+
+.navbar-brand {
+  font-family: 'Orbitron', sans-serif;
+  color: #A9A9A9;
+}
+
+/* ==========
 FOOTER
 ========== */
 
