--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,50 @@ GOOGLE FONT
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Orbitron&display=swap');
 
 /* ==========
+GENERAL
+========== */
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+  
+html {
+  height: 100%;
+}
+  
+body {
+  font-family: 'Nunito', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  min-height: 100%;
+  background-color: #101010;
+  color: #fff;
+}
+
+/* ==========
+USER INPUT
+========== */
+.btn {
+  background-color: #8000ff;
+  border-color: #8000ff;
+}
+
+.btn:hover {
+  background-color: #400080;
+  border-color: #8000ff;
+}
+
+/* ==========
 NAVBAR
 ========== */
 .navbar {
   width: 100%;
   text-align: end;
-  background-color: #101010;
+  background-color: #181818;
 }
 
 .navbar-brand {
@@ -29,6 +67,7 @@ footer {
 
 .copyright {
   font-family: 'Orbitron', sans-serif;
+  background-color: #181818;
   color: #A9A9A9;
 }
 
