--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,15 +175,16 @@ ANIMATION
 
 .animate {
   animation-name: shake;
-  animation-duration: 2s;
+  animation-duration: 0.9s;
   animation-iteration-count: 1;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
 }
 
 @keyframes shake {
-  0% {transform: translate(0,0) rotate(0deg) scale(1.1,1.1);}
-  0% {transform: translate(10px, 10px) rotate(30deg) scale(1.3,1.3);}
-  0% {transform: translate(0,0) rotate(0deg) scale(1.1,1.1);}
-  0% {transform: translate(-10px, 10px) rotate(-30deg) scale(1.5,1.5);}
+  0% {transform: translate(0,0) rotate(0deg)}
+  25% {transform: translate(5px, 5px) rotate(120deg)}
+  50% {transform: translate(-5px, 5px) rotate(-150deg)}
+  75% {transform: translate(5px, 5px) rotate(45deg)}
+  100% {transform: translate(0,0) rotate(0deg);}
 }
