--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ html {
 }
   
 body {
-  background: url("../images/8-ball-background.webp") top center; /*BUG: no-repeat causing to cut off background on mobile devices. Also changed 'bottom' to 'top' for increased contrast with text*/
+  background: url("../images/8-ball-background.webp") top center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -241,6 +241,11 @@ MEDIA QUERIES PORTRAIT ORIENTATION
   .error-message-text {
     font-size: 14px;
   } 
+
+  /* Footer */
+  .footer {
+    font-size: 10px;
+  }
 }
 
 @media (orientation: portrait) and (min-width: 330px) and (max-width:480px) {
@@ -280,6 +285,55 @@ MEDIA QUERIES PORTRAIT ORIENTATION
   .error-message-text {
     font-size: 16px;
   }
+
+  /* Footer */
+  .footer {
+    font-size: 11px;
+  }
+}
+
+@media (orientation: portrait) and (min-width: 481px) and (max-width: 768px) {
+  /* Header */
+  .heading h1 {
+    font-size: 50px;
+    margin: 24px 0 8px 0;
+  }
+  
+  .heading p {
+    font-size: 18px;
+    margin: 8px 30px;
+  }
+
+  /* 8 Ball */
+  .ball-black {
+    width: 360px;
+    height: 360px;
+    margin: 30px;
+  }
+  
+  .ball-white {
+    width: 165px;
+    height: 165px;
+  }
+  .holding-text {
+    width: 85px;
+    font-size: 140px;
+  }
+  
+  .answer-text {
+    width: 85px;
+    font-size: 18px;
+  }
+
+  /* Validation Error Message */
+  .error-message-text {
+    font-size: 18px;
+  }
+
+  /* Footer */
+  .footer {
+    font-size: 12px;
+  }
 }
 
 /* ==========
@@ -318,6 +372,7 @@ MEDIA QUERIES LANDSCAPE ORIENTATION
     font-size: 14px;
   }
 
+  /* User Input */
   .user-question {
     width: 75%;
     font-size: 14px;
@@ -333,6 +388,11 @@ MEDIA QUERIES LANDSCAPE ORIENTATION
   .error-message-text {
     font-size: 14px;
   } 
+
+  /* Footer */
+  .footer {
+    font-size: 12px;
+  }
 }
 
 @media (orientation: landscape) and (min-height: 330px) and (max-height:480px) {
@@ -384,12 +444,14 @@ MEDIA QUERIES LANDSCAPE ORIENTATION
   .error-message-text {
     font-size: 14px;
   } 
+
+  /* Footer */
+  .footer {
+    font-size: 12px;
+  }
 }
 
-/* ==========
-MEDIA QUERIES GENERAL
-========== */
-@media (min-width: 481px) and (max-width: 768px) {
+@media (orientation: landscape) and (min-height: 481px) and (max-height: 768px) {
   /* Header */
   .heading h1 {
     font-size: 50px;
@@ -425,5 +487,10 @@ MEDIA QUERIES GENERAL
   /* Validation Error Message */
   .error-message-text {
     font-size: 18px;
+  }
+
+  /* Footer */
+  .footer {
+    font-size: 12px;
   }
 }
