--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* ==========
 GOOGLE FONTS
 ========== */
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Orbitron&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&family=Orbitron&display=swap');
 
 /* ==========
 GENERAL
@@ -32,7 +32,7 @@ body {
   color: #fff;
 }
 
-.game-content {
+.page-content {
   min-height: 100%;
   display: flex;
   flex-direction: column;
@@ -162,16 +162,13 @@ VALIDATION ERROR MESSAGE
 /* ==========
 FOOTER
 ========== */
-.footer {
+.copyright {
+  font-family: 'Orbitron', sans-serif;
+  background-color: rgba(0, 0, 0, 0.1);
   flex-shrink: 0;
   text-align: center;
   margin: 8px;
   color: #DCDCDC;
-}
-
-.copyright {
-  font-family: 'Orbitron', sans-serif;
-  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .copyright p {
@@ -243,7 +240,7 @@ MEDIA QUERIES PORTRAIT ORIENTATION
   } 
 
   /* Footer */
-  .footer {
+  .copyright {
     font-size: 10px;
   }
 }
@@ -287,7 +284,7 @@ MEDIA QUERIES PORTRAIT ORIENTATION
   }
 
   /* Footer */
-  .footer {
+  .copyright {
     font-size: 11px;
   }
 }
@@ -331,7 +328,7 @@ MEDIA QUERIES PORTRAIT ORIENTATION
   }
 
   /* Footer */
-  .footer {
+  .copyright {
     font-size: 12px;
   }
 }
@@ -390,7 +387,7 @@ MEDIA QUERIES LANDSCAPE ORIENTATION
   } 
 
   /* Footer */
-  .footer {
+  .copyright {
     font-size: 12px;
     margin-top: 24px;
   }
@@ -447,7 +444,7 @@ MEDIA QUERIES LANDSCAPE ORIENTATION
   } 
 
   /* Footer */
-  .footer {
+  .copyright {
     font-size: 12px;
     margin-top: 24px;
   }
@@ -492,7 +489,7 @@ MEDIA QUERIES LANDSCAPE ORIENTATION
   }
 
   /* Footer */
-  .footer {
+  .copyright {
     font-size: 12px;
     margin-top: 24px;
   }
